style: fixed overflow issues and restyled mobile about page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,12 +5,11 @@ p, button, select {
 }
 
 header, footer {
-    width: 100vw;
     background-color: $color2;
 
     h1, h2, p {
         text-align: center;
-        padding: 0 25px;
+        padding: 0;
     }
 }
 nav {
@@ -98,31 +97,46 @@ footer {
         &:hover {
             font-style: italic;
         }
-        // responsive to tablet
-        @media only screen and (max-width: $tablet) {
-            font-style: italic;
-        }
     }
 
     // responsive to tablet
     @media only screen and (max-width: $tablet) {
 
+        background-color: $color1;
+
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
+        padding: 0;
+        margin: 0;
 
-        width: 100%;
-        max-width: calc(100% - 40px);
-
-        min-height: 375px;
-        height: calc(100vh - 300px);
-
-        background-color: $color1;
+        width: calc(100% - 43px);
+        height: calc(100vh - 218px);
 
         font-size: 18px;
 
         p {
-            padding: 15px 30px;
+            width: calc(100% - 17px);
+            padding: 30px;
+
+            &:first-of-type {
+                display: flex;
+                align-items: center;
+                background-color: $color2;
+                border: solid $black 3px;
+                border-left: none;
+                border-right: none;
+                height: calc(100% - 210px);
+            }
+
+            &:last-of-type {
+                background-color: $color1;
+                max-height: 180px;
+            }
+        }
+
+        a {
+            font-style: italic;
         }
 
         &.disabled {
@@ -541,7 +555,7 @@ button {
         display: flex;
         min-width: 100%;
         height: 283px;
-        overflow: scroll;
+        overflow-y: scroll;
         flex-flow: row wrap;
         justify-content: center;
         align-items: center;
